--- a/html/introduccion.html
+++ b/html/introduccion.html
@@ -17,11 +17,9 @@
 </li>
 </ul>
 </li>
-<li> <a href="../html/indice.html" class="no-ch">índice</a>
-</li>
 <li> <a href="../html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="../html/actividad.html" class="no-ch">Actividad</a>
 </li>
-<li> <a href="../html/reto.html" class="no-ch">Reto</a>
+<li> <a href="../html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
 </ul>
 </li>
@@ -35,8 +33,22 @@
                 <div><p><img src="../content/resources/20260127074639904QCQ/mceclip2.png" width="492" height="172" style="display: block; margin-left: auto; margin-right: auto;"></p>
 <p></p><p class="clearfix"></p></div>
             </div></div></div></div>
+</div></article><article id="20260127085547713AD6" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Texto</h1>
+<button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127085547710GYT" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
+            <div class="exe-text-activity">
+                <div><p><img src="../content/resources/20260127085547710GYT/mceclip0.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<table border="0" style="width: 99.9482%; border-color: #ECF0F1;">
+<tbody>
+<tr>
+<td style="width: 34.9809%;"><a href="../index.html" id="link_1"><img src="../content/resources/20260127085547710GYT/mceclip2.png" width="55" height="55" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
+<td style="width: 29.9832%;"></td>
+<td style="width: 34.9841%;"><a href="../html/contenido.html" id="link_2"><img src="../content/resources/20260127085547710GYT/mceclip1.png" width="58" height="58" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
+</tr>
+</tbody>
+</table><p class="clearfix"></p></div>
+            </div></div></div></div>
 </div></article>
-</div></main><div class="nav-buttons"> <a href="../index.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><a href="../html/indice.html" title="Siguiente" class="nav-button nav-button-right"> <span>Siguiente</span></a>
+</div></main><div class="nav-buttons"> <a href="../index.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><a href="../html/contenido.html" title="Siguiente" class="nav-button nav-button-right"> <span>Siguiente</span></a>
 </div>
 <footer id="siteFooter"><div id="siteFooterContent"> <div id="packageLicense" class="cc cc-by-sa"> <p> <span class="license-label">Licencia: </span><a href="https://creativecommons.org/licenses/by-sa/4.0/" class="license">creative commons: attribution - share alike 4.0</a></p>
 </div>
