--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 </li>
 </ul>
 </li>
-<li> <a href="html/indice.html" class="no-ch">índice</a>
-</li>
 <li> <a href="html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="html/actividad.html" class="no-ch">Actividad</a>
 </li>
-<li> <a href="html/reto.html" class="no-ch">Reto</a>
+<li> <a href="html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
 </ul>
 </li>
@@ -38,7 +36,7 @@
 <tr style="height: 76.6667px;">
 <td style="width: 34.8418%; text-align: center; height: 76.6667px;"><br></td>
 <td style="width: 29.9085%; height: 76.6667px; border-color: #ecf0f1;"><br></td>
-<td style="width: 34.8418%; height: 76.6667px;"><img src="content/resources/20260127073540175MWP/mceclip1.png" width="74" height="74" style="float: right;"></td>
+<td style="width: 34.8418%; height: 76.6667px;"><a href="html/introduccion.html" id="link_0"><img src="content/resources/20260127073540175MWP/mceclip1.png" width="74" height="74" style="float: right;"></a></td>
 </tr>
 </tbody>
 </table>
