--- a/html/contenido.html
+++ b/html/contenido.html
@@ -17,7 +17,9 @@
 </li>
 </ul>
 </li>
-<li class="active"> <a href="../html/contenido.html" class="active daddy">Contenido</a><ul> <li> <a href="../html/actividad.html" class="no-ch">Actividad</a>
+<li class="active"> <a href="../html/contenido.html" class="active daddy">Contenido</a><ul> <li> <a href="../html/actividad-1.html" class="no-ch">Actividad 1</a>
+</li>
+<li> <a href="../html/actividad-2.html" class="no-ch">Actividad 2</a>
 </li>
 <li> <a href="../html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
@@ -27,40 +29,36 @@
 <h1 class="package-title">Habilidades Lógico Matemáticas mediante Robótica Educativa e Inteligencia Artificial</h1>
 <p class="package-subtitle">Habilidades Lógico Matemáticas mediante Inteligencia Artificial</p>
 </div>
-<div class="page-header"><h2 class="page-title">Contenido</h2></div></header><div id="page-content-202601270734309179ZO" class="page-content"> <article id="20260127090615868SDM" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Texto</h1>
+<div class="page-header"><h2 class="page-title">Contenido</h2></div></header><div id="page-content-202601270734309179ZO" class="page-content"> <article id="20260127090615868SDM" class="box"> <header class="box-head no-icon"> <h1 class="box-title">&lt;br&gt;</h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127090615865J93" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
-                <div><p><img src="../content/resources/20260127090615865J93/mceclip3.png"></p><p class="clearfix"></p></div>
+                <div><p><img src="../content/resources/20260127090615865J93/mceclip1_1.png"></p><p class="clearfix"></p></div>
             </div></div></div></div>
 </div></article><article id="20260127090638288604" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Contenidos</h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127090638285MEH" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
                 <div><p style="text-align: center;"><strong>¿Qué es la lógica?</strong></p>
-<p><strong><img src="../content/resources/20260127090638285MEH/mceclip4.png" width="121" height="121" style="display: block; margin-left: auto; margin-right: auto;"></strong></p>
-<p>La lógica es la manera de pensar con orden para encontrar soluciones.<br>Nos ayuda a pensar paso a paso, a entender qué va primero y qué va después, y a tomar decisiones correctas.</p>
-<p><strong>Ejemplo:</strong><br>Si sabes que para llegar a la escuela primero debes vestirte y luego salir de casa, estás usando la lógica.</p>
-<p style="text-align: center;"><strong>¿Qué son las habilidades lógico-matemáticas?</strong></p>
-<p style="text-align: center;"><strong><img src="../content/resources/20260127090638285MEH/mceclip5.png" width="140" height="140"></strong></p>
-<p>Las habilidades lógico-matemáticas son las capacidades que usamos para contar, comparar, ordenar, reconocer patrones y resolver problemas.</p>
-<p style="text-align: center;"><strong>¿Cómo se relacionan con la inteligencia artificial?</strong></p>
-<p>La inteligencia artificial (IA) es una tecnología que aprende a resolver problemas usando la lógica, igual que las personas, pero lo hace con la ayuda de computadoras.</p>
-<p><img src="../content/resources/20260127090638285MEH/mceclip6.png" width="122" height="122" style="display: block; margin-left: auto; margin-right: auto;"></p>
-<p><strong>Ejemplo:</strong></p>
-<p>Cuando un robot avanza, gira o se detiene porque tú le diste instrucciones, estás usando lógica</p>
-<p>Cuando un juego te hace pensar qué movimiento es el mejor para ganar, estás usando habilidades lógico-matemáticas</p>
-<p>Cuando una aplicación te ayuda a resolver un problema porque reconoce patrones, está usando inteligencia artificial</p>
+<p style="text-align: center;"><strong><img src="../content/resources/20260127090638285MEH/mceclip2_1.png" width="96" height="96"></strong></p>
+<p style="text-align: left;">La lógica es la manera de pensar con orden para encontrar soluciones.<br>Nos ayuda a pensar paso a paso, a entender qué va primero y qué va después, y a tomar decisiones correctas.</p>
+<p style="text-align: left;"><strong>Ejemplo:</strong><br>Si sabes que para llegar a la escuela primero debes vestirte y luego salir de casa, estás usando la lógica.</p>
+<p style="text-align: left;"><strong>¿Qué son las habilidades lógico-matemáticas?</strong></p>
+<p style="text-align: left;"><strong><img src="../content/resources/20260127090638285MEH/mceclip3_1.png" width="99" height="99" style="display: block; margin-left: auto; margin-right: auto;"></strong></p>
+<p style="text-align: left;">Las habilidades lógico-matemáticas son las capacidades que usamos para contar, comparar, ordenar, reconocer patrones y resolver problemas.</p>
+<p style="text-align: left;"><strong>¿Cómo se relacionan con la inteligencia artificial?</strong></p>
+<p><img src="../content/resources/20260127090638285MEH/mceclip5.png" width="104" height="104" style="display: block; margin-left: auto; margin-right: auto;"><br>La inteligencia artificial (IA) es una tecnología que aprende a resolver problemas usando la lógica, igual que las personas, pero lo hace con la ayuda de computadoras.</p>
+<p><br></p>
 <table border="0" style="width: 99.9482%; height: 26.6667px;">
 <tbody>
 <tr style="height: 26.6667px;">
 <td style="width: 34.9809%; height: 26.6667px;"><br></td>
-<td style="width: 29.9832%; height: 26.6667px;"><a href="../html/introduccion.html" id="link_3"><img src="../content/resources/20260127090638285MEH/mceclip7.png" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
-<td style="width: 34.9841%; height: 26.6667px;"><a href="../html/actividad.html" id="link_4"><img src="../content/resources/20260127090638285MEH/mceclip8.png" width="57" height="57" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
+<td style="width: 29.9832%; height: 26.6667px;"><a href="../html/introduccion.html" id="link_3"><span style="color: #212529;"><img src="../content/resources/20260127090638285MEH/mceclip7.png" style="display: block; margin-left: auto; margin-right: auto;"></span></a></td>
+<td style="width: 34.9841%; height: 26.6667px;"><a href="../html/actividad-1.html" id="link_4" title=""><span style="color: #212529;"><img src="../content/resources/20260127090638285MEH/mceclip8.png" width="57" height="57" style="display: block; margin-left: auto; margin-right: auto;"></span></a></td>
 </tr>
 </tbody>
 </table><p class="clearfix"></p></div>
             </div></div></div></div>
 </div></article>
-</div></main><div class="nav-buttons"> <a href="../html/introduccion.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><a href="../html/actividad.html" title="Siguiente" class="nav-button nav-button-right"> <span>Siguiente</span></a>
+</div></main><div class="nav-buttons"> <a href="../html/introduccion.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><a href="../html/actividad-1.html" title="Siguiente" class="nav-button nav-button-right"> <span>Siguiente</span></a>
 </div>
 <footer id="siteFooter"><div id="siteFooterContent"> <div id="packageLicense" class="cc cc-by-sa"> <p> <span class="license-label">Licencia: </span><a href="https://creativecommons.org/licenses/by-sa/4.0/" class="license">creative commons: attribution - share alike 4.0</a></p>
 </div>
