--- a/html/evaluacion-y-seguimiento.html
+++ b/html/evaluacion-y-seguimiento.html
@@ -17,7 +17,9 @@
 </li>
 </ul>
 </li>
-<li class="current-page-parent"> <a href="../html/contenido.html" class="daddy">Contenido</a><ul> <li> <a href="../html/actividad.html" class="no-ch">Actividad</a>
+<li class="current-page-parent"> <a href="../html/contenido.html" class="daddy">Contenido</a><ul> <li> <a href="../html/actividad-1.html" class="no-ch">Actividad 1</a>
+</li>
+<li> <a href="../html/actividad-2.html" class="no-ch">Actividad 2</a>
 </li>
 <li class="active"> <a href="../html/evaluacion-y-seguimiento.html" class="active no-ch">Evaluación y seguimiento</a>
 </li>
@@ -33,7 +35,7 @@
                     <div class="informe-bns js-hidden">undefined</div>
                 </div></div>
 </div></article>
-</div></main><div class="nav-buttons"> <a href="../html/actividad.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><span class="nav-button nav-button-right" aria-hidden="true"> <span>Siguiente</span></span>
+</div></main><div class="nav-buttons"> <a href="../html/actividad-2.html" title="Anterior" class="nav-button nav-button-left"> <span>Anterior</span></a><span class="nav-button nav-button-right" aria-hidden="true"> <span>Siguiente</span></span>
 </div>
 <footer id="siteFooter"><div id="siteFooterContent"> <div id="packageLicense" class="cc cc-by-sa"> <p> <span class="license-label">Licencia: </span><a href="https://creativecommons.org/licenses/by-sa/4.0/" class="license">creative commons: attribution - share alike 4.0</a></p>
 </div>
