--- a/html/introduccion.html
+++ b/html/introduccion.html
@@ -17,7 +17,9 @@
 </li>
 </ul>
 </li>
-<li> <a href="../html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="../html/actividad.html" class="no-ch">Actividad</a>
+<li> <a href="../html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="../html/actividad-1.html" class="no-ch">Actividad 1</a>
+</li>
+<li> <a href="../html/actividad-2.html" class="no-ch">Actividad 2</a>
 </li>
 <li> <a href="../html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
@@ -27,16 +29,10 @@
 <h1 class="package-title">Habilidades Lógico Matemáticas mediante Robótica Educativa e Inteligencia Artificial</h1>
 <p class="package-subtitle">Habilidades Lógico Matemáticas mediante Inteligencia Artificial</p>
 </div>
-<div class="page-header"><h2 class="page-title">Introducción</h2></div></header><div id="page-content-20260127073349207D3W" class="page-content"> <article id="202601270746399084BU" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Texto</h1>
-<button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127074639904QCQ" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
-            <div class="exe-text-activity">
-                <div><p><img src="../content/resources/20260127074639904QCQ/mceclip2.png" width="492" height="172" style="display: block; margin-left: auto; margin-right: auto;"></p>
-<p></p><p class="clearfix"></p></div>
-            </div></div></div></div>
-</div></article><article id="20260127085547713AD6" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Texto</h1>
+<div class="page-header"><h2 class="page-title">Introducción</h2></div></header><div id="page-content-20260127073349207D3W" class="page-content"> <article id="20260127085547713AD6" class="box"> <header class="box-head no-icon"> <h1 class="box-title">&lt;br&gt;</h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127085547710GYT" class="idevice_node text" data-idevice-path="../idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
-                <div><p><img src="../content/resources/20260127085547710GYT/mceclip0.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+                <div><p><img src="../content/resources/20260127085547710GYT/mceclip0.png"></p>
 <table border="0" style="width: 99.9482%; border-color: #ECF0F1;">
 <tbody>
 <tr>
