--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </li>
 </ul>
 </li>
-<li> <a href="html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="html/actividad.html" class="no-ch">Actividad</a>
+<li> <a href="html/contenido.html" class="daddy">Contenido</a><ul class="other-section"> <li> <a href="html/actividad-1.html" class="no-ch">Actividad 1</a>
+</li>
+<li> <a href="html/actividad-2.html" class="no-ch">Actividad 2</a>
 </li>
 <li> <a href="html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
@@ -27,7 +29,7 @@
 <h1 class="package-title">Habilidades Lógico Matemáticas mediante Robótica Educativa e Inteligencia Artificial</h1>
 <p class="package-subtitle">Habilidades Lógico Matemáticas mediante Inteligencia Artificial</p>
 </div>
-<div class="page-header"><h2 class="page-title">Portada</h2></div></header><div id="page-content-20260121133806ACAUHH" class="page-content"> <article id="202601270735401805TH" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Texto</h1>
+<div class="page-header"><h2 class="page-title">Portada</h2></div></header><div id="page-content-20260121133806ACAUHH" class="page-content"> <article id="202601270735401805TH" class="box"> <header class="box-head no-icon"> <h1 class="box-title">&lt;br&gt;</h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127073540175MWP" class="idevice_node text" data-idevice-path="idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
                 <div><p><img src="content/resources/20260127073540175MWP/mceclip0.jpg" width="626" height="886" style="float: left;"></p>
