--- a/index.html
+++ b/index.html
@@ -23,22 +23,30 @@
 </li>
 <li> <a href="html/evaluacion-y-seguimiento.html" class="no-ch">Evaluación y seguimiento</a>
 </li>
+<li> <a href="html/referencias-bibliograficas.html" class="no-ch">Referencias bibliográficas </a>
+</li>
 </ul>
 </li>
-</ul></nav><main id="20260121133806ACAUHH" class="page"> <header id="header-20260121133806ACAUHH" class="main-header"> <div class="package-header">
+</ul></nav><main id="20260127170011KXUSZM" class="page"> <header id="header-20260127170011KXUSZM" class="main-header"> <div class="package-header">
 <h1 class="package-title">Habilidades Lógico Matemáticas mediante Robótica Educativa e Inteligencia Artificial</h1>
 <p class="package-subtitle">Habilidades Lógico Matemáticas mediante Inteligencia Artificial</p>
 </div>
-<div class="page-header"><h2 class="page-title">Portada</h2></div></header><div id="page-content-20260121133806ACAUHH" class="page-content"> <article id="202601270735401805TH" class="box"> <header class="box-head no-icon"> <h1 class="box-title">&lt;br&gt;</h1>
+<div class="page-header"><h2 class="page-title">Portada</h2></div></header><div id="page-content-20260127170011KXUSZM" class="page-content"> <article id="20260127170011OMFAQD" class="box"> <header class="box-head no-icon"> <h1 class="box-title">Portada</h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260127073540175MWP" class="idevice_node text" data-idevice-path="idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
-                <div><p><img src="content/resources/20260127073540175MWP/mceclip0.jpg" width="626" height="886" style="float: left;"></p>
+                <div><table border="1" style="width: 100.051%;">
+<tbody>
+<tr>
+<td style="width: 99.8483%;"><img src="content/resources/20260127073540175MWP/mceclip1.png" style="display: block; margin-left: auto; margin-right: auto;"></td>
+</tr>
+</tbody>
+</table>
 <table border="0" height="72" style="width: 97.6166%; height: 76.6667px; border-color: #ecf0f1;">
 <tbody>
 <tr style="height: 76.6667px;">
 <td style="width: 34.8418%; text-align: center; height: 76.6667px;"><br></td>
 <td style="width: 29.9085%; height: 76.6667px; border-color: #ecf0f1;"><br></td>
-<td style="width: 34.8418%; height: 76.6667px;"><a href="html/introduccion.html" id="link_0"><img src="content/resources/20260127073540175MWP/mceclip1.png" width="74" height="74" style="float: right;"></a></td>
+<td style="width: 34.8418%; height: 76.6667px;"><a href="html/introduccion.html" id="link_0"><img src="content/resources/20260127073540175MWP/mceclip2.png" width="85" height="85" style="display: block; margin-left: auto; margin-right: auto;"></a></td>
 </tr>
 </tbody>
 </table>
